test/parser.d/invalid/reassign0.surc.bad
main() = do
	x: Int = 5
	x <- 5
	print $x
